deployments-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: material-escolar-beckend
  namespace: demo-materialescolar
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: material-escolar-beckend
  template:
    metadata:
      labels:
        app: material-escolar-beckend
    spec:
      containers:
        - name: material-escolar-beckend      
          image: luizhpriotto/material-escolar-beckend:${tag}
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -c
            - python manage.py migrate && python manage.py collectstatic --noinput && gunicorn config.wsgi:application --bind=0.0.0.0:8001 -w 8 
          ports:
          - containerPort: 8001
            name: 8001tcp02
            protocol: TCP
          resources: 
      restartPolicy: Always
      imagePullSecrets:
      - name: dockerhub
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
  name: material-escolar-beckend
  namespace: demo-materialescolar
spec:
  rules:
  - host: demo-materialescolar.sme.prefeitura.sp.gov.br
    http:
      paths:
      - backend:
          serviceName: material-escolar-beckend
          servicePort: 8001
        path: /
---

apiVersion: v1
kind: Service
metadata:
  name: material-escolar-beckend
  namespace: demo-materialescolar
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8001
  selector:
    app: material-escolar-beckend
status:
  loadBalancer: {}
